--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -647,6 +647,8 @@
       "NO_SSH_KEY": "Нет SSH ключа",
       "START_VM": "Запустить ВМ",
       "YOU_RAN_OUT_OF": "Вам не хватает",
+      "NO_AVAILABLE_INSTANCES": "Невозможно создать виртуальную машину, поскольку ваш аккаунт достиг максимального количества виртуальных машин. Пожалуйста свяжитесь со службой поддержки.",
+      "NO_MAX_INSTANCES": "Вы не можете создавать виртуальные машины, поскольку максимальное допустимое количество машин для аккаунта установлено как 0. Пожалуйста свяжитесь со службой поддержки.",
       "CPUS": "ЦП",
       "MEMORY": "ОЗУ",
       "INSTANCES": "ВМ",
